core revision