@@ -1,8 +1,8 @@
 package kk.arraylistAndGenerics;
 /*
-Dynamic size is not actually true. Internally, the size is fixed and using Array DS, but keeps on changing until certain threshold is reached. When element count threshold hits,
+Dynamic size is not actually true. Internally, the size is fixed and using Array DS, but keeps on changing until certain threshold is reached (10). When element count threshold hits,
 new ArrayList is created, elements from old arraylist are copied to new one, new arraylist reference replaces the old arraylist, old arraylist gets deleted.
-All this happens seamlessly.
+All this happens seamlessly. ArrayList growth-factor is 1.5x
 Insertion O(1) when threshold hasn't reached; O(N) threshold reached; O(N) adding at specific index.
 Deletion: O(N)
 Search: O(1) since Arrays underlies.
@@ -11,12 +11,19 @@ Space: O(N)
 Not thread-safe; maintains insertion order, null allowed, duplicates allowed.
  */
 
+/**
+ * Lsit is an interface which ensures that classes implementing it, can put duplicate elements maintaining the insertion order. List is extended by ArrayList, LinkedList, Vector, Stack
+ */
+
+import kk.lambdas.Student;
+import kk.oops.Students;
+
 import java.util.*;
 import java.util.concurrent.CopyOnWriteArrayList;
 
 public class ArrayListExample {
     public static void main(String[] args) {
-        // syntax: LHS should have the datatype of elements inside diamond operator. RHS can also have it, but it's redundant to have same datatype there in <> in RHS
+        // syntax: LHS should have the datatype of elements inside diamond operator. RHS can also have it, but it's redundant to have same datatype there in <> in RHS due to type-inference.
         // () calls constructor in RHS can have initialCapacity of ArrayList.
         // In Java, <> cannot have primitive data types inside it.
         // Therefore, to make generics compatible with primitive data types, there is an autoboxing of primitives, makes them derived type of Java Object, called wrapper objects.
@@ -29,13 +36,13 @@ public class ArrayListExample {
         arr1.add(38);
         arr1.add(90);
 
-        System.out.println(arr1.contains(10));  // false
+        System.out.println(arr1.contains(10));  // false - uses Object.equals(arr1[i], 10)
         System.out.println(arr1.contains(234)); // true
         System.out.println(arr1);   //[234, 12, 546, 38, 90]
         arr1.set(2,34567);
         System.out.println(arr1);   // // [234, 12, 34567, 38, 90]
         arr1.remove(1);
-        System.out.println(arr1.remove(new Integer(90)));   // true
+        System.out.println(arr1.remove(new Integer(90)));   // true// arr1.remove(Integer.valueOf(564));   to remove the object, as remove proves 2 functionality; first takes index and another takes the element in the list itself where first matching occurrence will get removed.
         System.out.println(arr1);   // [234, 34567, 38]
         arr1.add(1, 407);
         System.out.println(arr1);   // [234, 407, 34567, 38]
@@ -49,12 +56,22 @@ public class ArrayListExample {
             System.out.println(arr1.get(i));    // syntax like arr1[idx] will not work here
         }
 
-        ListIterator<Integer> lstItr = arr1.listIterator();
-        // next and previous points to the address of next element. When we call them, it returns that element and then moves next|previous element,
-        // Rather first moving next|previous and then returning element.
-        System.out.println(lstItr.next());  // 234
-        System.out.println(lstItr.previous());  // 234
-        // nextIndex() can be size of array if pointing last, and previousIndex() can be -1 if pointing to first element.
+
+        // ArrayList to Array::::
+        Object[] array = arr1.toArray();    // this returns the array of Object type, but we want an array of Integer type.
+        Integer[] array1 = arr1.toArray(new Integer[0]);    // we passed 0 sized array because we just needed to tell what type of array we want. Although, output size is same as of arr1.
+        System.out.println(Arrays.toString(array));
+        System.out.println(Arrays.toString(array1));
+
+        Collections.sort(arr1); // we can pass Comparator as the second argument also.
+//        arr1.sort();    // need comparator, hence giving error.
+        arr1.sort(null);
+        // There are few methods by which we can pass the comparator.
+        // 1. defining a new class implementing Comparator
+        // 2. passing lambda directly as considering 'a', and 'b' as complex objects, (a,b) -> { logic to compare attributes of 'a' & 'b' }
+//        3.  Comparator<Students> stComp = Comparator.comparing(Student::getMarks).reversed().thenComparing(Students::getName().length());
+
+        System.out.println(arr1.isEmpty());
 
 
         // Multidimensional ArrayList
@@ -73,12 +90,14 @@ public class ArrayListExample {
         System.out.println(multArrList);
 
         // Also, look below methods:
-        // boolean remove(int idx | E ele)  // either take the index to remove the element at that index, or pass the element itself to remove the first occurrence of the element.
+        // boolean remove(int idx | E ele)  // Uses Object.equals(o, ele); either take the index to remove the element at that index, or pass the element itself to remove the first occurrence of the element.
+//        removeAll(Collection) ; removeIf(Predicate)
 //        arr1.retainAll(any other collection);   // arr1 will have only those elements which will be common to arr1 and collection item passed
 //        arr1.replaceAll();  // takes UnaryOperator type instance which is basically a lambda which takes one element at a time as an input from arr1,
         // and transforms and returns an element of type of list
-        // splitIterator()
-        // contains(Collections coll)   O(n^2)
+//        Spliterator<Integer> spliterator = arr1.spliterator();
+//         arr1.containsAll(Collections coll)   O(n^2)
+//        arr1.contains(Object obj)     // uses Object.equals(arr1[i], obj), ; also works if checked for null and null is present in the array.
 
         /**
          * List has also their own custom iterator method which return iterator of type ListIterator<E> listIterator([int startIdx]);
@@ -87,9 +106,18 @@ public class ArrayListExample {
          *
          * add(E ele) {supports selective List type only}, hasPrevious(), nextIndex() {returns idx of element that would be returned by next()}, previous(), previousIndex(), set(E ele)
          */
+        // Iterable interface has iterator abstract method, along with hasNext() next() and remove() method. While in ArrayList, we cannot modify it while it is in loop, but iterator provides us that functionality.
+
+        ListIterator<Integer> lstItr = arr1.listIterator();
+        // next and previous points to the address of next element. When we call them, it returns that element and then moves next|previous element,
+        // Rather first moving next|previous and then returning element.
+        System.out.println(lstItr.next());  // 234
+        System.out.println(lstItr.previous());  // 234
+//        remove, previous, hasPrevious, next, hasNext, add, set, nextIndex, previousIndex, forEachRemaining(Consumer)
+        // nextIndex() can be size of array if pointing last, and previousIndex() can be -1 if pointing to first element.
 
 
-        // Thread-safe version:
+        // Thread-safe version: See SynchronizedArrayList
         CopyOnWriteArrayList<Integer> threadsafeArrayList = new CopyOnWriteArrayList<>();
     }
 }
